--- a/book/templates/authors/author_list.html
+++ b/book/templates/authors/author_list.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     {% for author in authors %}
-        <p>{{ author.first_name }}</p>
+        <p>
+            <a href="{% url 'book:author_update' author.id %}">{{ author.first_name }}</a>
+            <a href="{% url 'book:author_delete' author.id %}">Delete</a>
+        </p>
+
     {% endfor %}
 {% endblock %}
