--- a/book/templates/publishers/publisher_list.html
+++ b/book/templates/publishers/publisher_list.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     {% for publisher in publishers %}
-        <p>{{ publisher.name }}</p>
+        <p>
+            <a href="{% url 'book:publisher_update' publisher.id %}">{{ publisher.name }}</a>
+            <a href="{% url 'book:publisher_delete' publisher.id %}">Delete</a>
+        </p>
+
     {% endfor %}
 {% endblock %}
